src/objects/Google_Distance_Matrix_API_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensor__c</fullName>
        <label>Sensor</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Google Distance Matrix API Setting</label>
</CustomObject>